--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
-/* Azeret Mono font */
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* Montserrat font */
 
 /* header-section */
 *{
     margin: 0px;
     padding: 0px;
-    font-family: "Azeret Mono", monospace;
+    font-family: "Montserrat", sans-serif;
     max-width: 1920px;
 }
 
@@ -36,8 +36,12 @@
 
 .heading-section .paragraph-01{
     font-size: 21px;
+    font-weight: 530;
     text-align: center;
-    margin-bottom: 43px;
+    margin-bottom: 60px;
+    color: rgb(13, 19, 33);
+    opacity: 0.7;
+
 }
 
 .heading-section .btn{
@@ -82,7 +86,11 @@ main{
 .development-section .section-paragraph{
     text-align: center;
     font-size: 21px;
+    font-weight: 530;
     margin-bottom: 48px;
+    color: rgb(13, 19, 33);
+    opacity: 0.7;
+
 }
 .box-content-1{
     display: flex;
@@ -98,7 +106,11 @@ main{
 
 .development-section .box-content-1 .description{
     font-size: 21px;
+    font-weight: 530;
     margin-bottom: 43px;
+    color: rgb(13, 19, 33);
+    opacity: 0.7;
+
 }
 
  .box-btn{
@@ -131,7 +143,11 @@ main{
 
 .insp-section .insp-description{
     font-size: 21px;
+    font-weight: 530;
     text-align: center;
+    color: rgb(13, 19, 33);
+    opacity: 0.7;
+
 }
 
 .iframe-content{
@@ -164,8 +180,12 @@ main{
 
 .target-section .target-description{
     font-size: 21px;
+    font-weight: 530;
     text-align: center;
     margin-bottom: 48px;
+    color: rgb(13, 19, 33);
+    opacity: 0.7;
+
 }
 
 .card-container{
@@ -174,10 +194,11 @@ main{
     align-items: center;
     justify-content: flex-start;
     gap: 32px;
+    margin-bottom: 45px;
 }
 
 .card-container .card{
-    max-width: 485px;
+    width: 485px;
     height: 300px;
     padding: 53px;
     border-radius: 16px;
@@ -189,12 +210,15 @@ main{
 }
 
 .card-container .card-description{
-    font-size: ;
     margin-bottom: 32px;
+    font-weight: 530;
+    color: rgb(13, 19, 33);
+    opacity: 0.7;
+
 }
 
 .card-container .card-footer{
-    
+    font-size: 21px;
 }
 .card-image{
     width: 53px;
@@ -211,4 +235,61 @@ main{
 
 .color-3{
     background-color: rgba(255, 223, 0, 0.05);
+}
+
+.support-section{
+    border-radius: 16px;
+    background-image: url(assets/handshake.jpg);
+    width: 1520px;
+    height: 420px;
+    margin: 0 auto;
+    padding: 85px 64px;
+    border-radius: 21px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.support-section .support-title{
+    font-size: 43px;
+    font-weight: 800;
+    color: white;
+    text-align: center;
+    margin-bottom: 21px;
+}
+
+.support-section .support-subtitle{
+    font-size: 21px;
+    font-weight: 530;
+    color: rgb(255, 255, 255);
+    opacity: 0.7;
+    text-align: center;
+    margin-bottom: 52px;
+    color: white
+    opacity: 0.7;
+
+}
+
+.support-section .comment-section{
+    width: 600px;
+    height: 50px;
+    border-radius: 10px;
+    padding: 25px 26px;
+    font-size: 21px;
+    font-weight: 530;
+    justify-content: center;
+    border: none;
+}
+
+.submit-button{
+    width: 160px;
+    height: 100px;
+    border-radius: 10px;
+    font-size: 26px;
+    font-weight: 800;
+    margin: o auto;
+    border: none;
+    margin-left: 20px;
+    cursor: pointer;
 }
